# pico-interface-fmsynth

./: .gitmodules  CMakeLists.txt  GPIO.hpp  MEMLSerial_Pico.cpp  MEMLSerial_Pico.hpp  MIDI_In.cpp  MIDI_In.hpp  MaxiTrigger.hpp  OnePoleSmoother.hpp  README.md  cgi.cpp  cgi.h  fmsynth-interface.cpp  main.cpp  my_fsdata.c  ssi.cpp
fs/: NexusUI.min.js  index.html  ssi.shtml
